--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
-
+<!-- Font Awesome 6 (for TikTok icon support) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
@@ -292,58 +293,31 @@
       <hr>
       <p>"Our creative team crafts unique spaces with passion and precision."</p>
     </div>
-    <div class="col-md-4">
-      <h3>Contact Info</h3>
-      <div class="contact-item"> <span>Address</span>
-        <p>sohag,egypt<br>
-          giza,egypt</p>
-      </div>
-      <div class="contact-item"> <span>Email</span>
-        <p>renova80.80.80@gmail.com</p>
-      </div>
-      <div class="contact-item"> <span>Phone</span>
-        <p> +201094947486<br>
-            +201069242192</p>
-      </div>
+    <div class="col-md-12">
+  <h3>Contact Info</h3>
+  <div style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 30px;">
+    <div class="contact-item" style="flex: 1; min-width: 200px;">
+      <span>Address</span>
+      <p>Sohag, Egypt<br>Giza, Egypt</p>
     </div>
-    <div class="col-md-8">
-      <h3>Leave us a message</h3>
-      <form action="https://formsubmit.co/el/jufibi" method="POST">
-  <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <input type="text" id="name" class="form-control" placeholder="Name" required="required">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-          <p class="help-block text-danger"></p>
-        </div>
-        <div id="success"></div>
-        <button type="submit" class="btn btn-custom btn-lg">Send Message</button>
-      </form>
+    <div class="contact-item" style="flex: 1; min-width: 200px;">
+      <span>Email</span>
+      <p>renova80.80.80@gmail.com</p>
+    </div>
+    <div class="contact-item" style="flex: 1; min-width: 200px;">
+      <span>Phone</span>
+      <p>+201094947486<br>+201069242192</p>
     </div>
   </div>
+</div>
 </div>
 <div id="footer">
   <div class="container text-center">
     <div class="social">
       <ul>
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=61576756633836"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/renova_design8/"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://www.tiktok.com/@renova_design?lang=en"><i class="fa fa-tiktok"></i></a></li>
       </ul>
     </div>
     <div>
